--- a/prueba_bonus.ipynb
+++ b/prueba_bonus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 116,
    "id": "66adbf31",
    "metadata": {},
    "outputs": [],
@@ -97,12 +97,31 @@
     "                        \"Compras realizadas\": compras,\n",
     "                    }\n",
     "        return clientes\n",
+    "    def realizar_compra(self, cantidad, cliente):\n",
+    "        if  cliente not in self.clientes: #primera condición cliente registrado\n",
+    "            print(f\"El cliente no está registrado, se debe registrar para la compra.\")\n",
+    "        \n",
+    "        else:\n",
+    "            while  True:\n",
+    "                producto = input('Inserte el producto que quiere buscar').lower() #input dentro del bucle para volver a preguntar\n",
+    "                \n",
+    "                if producto not in self.inventario: #segunda condición para hacer compra\n",
+    "                    print(f\"El producto {producto} no se encuentra disponible.\")\n",
+    "                if producto in self.inventario:\n",
+    "                    if self.inventario[producto] >= cantidad: #si está en el inventario y hay cantidad suficiente\n",
+    "                        self.inventario[producto] -= cantidad #se actualiza la cantidad en el inventario\n",
+    "                        print(f\"La compra del producto {producto} ha sido un éxito.\")\n",
+    "                        print(f\"¿Quiere comprar algún otro producto de la tienda? Productos disponibles {self.inventario}.\")\n",
+    "                seguir_comprando = input('¿Quiere seguir comprando?').lower() #volver a preguntar para detener el bucle\n",
+    "                if seguir_comprando == 'no':\n",
+    "                    print(\"Gracias por su compra. Hasta la próxima.\")\n",
+    "                    break\n",
     "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 117,
    "id": "aa4bded2",
    "metadata": {},
    "outputs": [
@@ -147,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 118,
    "id": "6af2074c",
    "metadata": {},
    "outputs": [
@@ -173,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 119,
    "id": "3a7ebd9f",
    "metadata": {},
    "outputs": [
@@ -191,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 120,
    "id": "0f0b8abd",
    "metadata": {},
    "outputs": [
@@ -209,15 +228,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4304174b",
+   "execution_count": 127,
+   "id": "b620dfd3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'>=' not supported between instances of 'list' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[127], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m tienda1\u001b[38;5;241m.\u001b[39mrealizar_compra(\u001b[38;5;241m2\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMarc\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[116], line 102\u001b[0m, in \u001b[0;36mTiendaOnline.realizar_compra\u001b[1;34m(self, cantidad, cliente)\u001b[0m\n\u001b[0;32m    100\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEl producto \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mproducto\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m no se encuentra disponible.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    101\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m producto \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minventario:\n\u001b[1;32m--> 102\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minventario[producto] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m cantidad: \u001b[38;5;66;03m#si está en el inventario y hay cantidad suficiente\u001b[39;00m\n\u001b[0;32m    103\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minventario[producto] \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m cantidad \u001b[38;5;66;03m#se actualiza la cantidad en el inventario\u001b[39;00m\n\u001b[0;32m    104\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLa compra del producto \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mproducto\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m ha sido un éxito.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: '>=' not supported between instances of 'list' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "tienda1.realizar_compra(2, 'Marc')\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 121,
+   "id": "4304174b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def realizar_compra(self, producto, cantidad, cliente):\n",
+    "    while producto in self.inventario and cliente in self.clientes: #hay que cambiar el while para que se detenga cuando el cliente quiera\n",
+    "        if producto[1] >= cantidad: # se puede realizar la compra\n",
+    "            producto[1] -= cantidad in self.inventario\n",
+    "            print(f\"Venta realizada con éxito del producto {producto}.\")\n",
+    "            break\n",
+    "        else:\n",
+    "            print(f\"Este producto no está en el inventario\")\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "285a8c16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def realizar_compra(self, producto, cantidad, cliente):\n",
+    "    producto = input('Inserte el producto que quiere buscar').lower #input dentro del bucle para volver a preguntar\n",
+    "    if producto in self.inventario and cliente in self.clientes: \n",
+    "        while  True:\n",
+    "            if producto[1] >= cantidad: # se puede realizar la compra\n",
+    "                producto[1] -= cantidad in self.inventario\n",
+    "                print(f\"Venta realizada con éxito del producto {producto}.\")\n",
+    "                break\n",
+    "            else:\n",
+    "                print(f\"Este producto no está en el inventario\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "9473fe80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def realizar_compra(self, cantidad, cliente):\n",
+    "    if  cliente not in self.clientes: #primera condición cliente registrado\n",
+    "        print(f\"El cliente no está registrado, se debe registrar para la compra.\")\n",
+    "    \n",
+    "    else:\n",
+    "        while  True:\n",
+    "            producto = input('Inserte el producto que quiere buscar').lower() #input dentro del bucle para volver a preguntar\n",
+    "            \n",
+    "            if producto not in self.inventario: #segunda condición para hacer compra\n",
+    "                print(f\"El producto {producto} no se encuentra disponible.\")\n",
+    "            if producto in self.inventario:\n",
+    "                if self.inventario[producto] >= cantidad: #si está en el inventario y hay cantidad suficiente\n",
+    "                    self.inventario[producto] -= cantidad #se actualiza la cantidad en el inventario\n",
+    "                    print(f\"La compra del producto {producto} ha sido un éxito.\")\n",
+    "                    print(f\"¿Quiere comprar algún otro producto de la tienda? Productos disponibles {self.inventario}.\")\n",
+    "            seguir_comprando = input('¿Quiere seguir comprando?').lower() #volver a preguntar para detener el bucle\n",
+    "            if seguir_comprando == 'no':\n",
+    "                print(\"Gracias por su compra. Hasta la próxima.\")\n",
+    "                break\n",
+    "\n",
+    "\n",
+    "\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
    "id": "5c5c629d",
    "metadata": {},
    "outputs": [],
@@ -236,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 125,
    "id": "a36e3f10",
    "metadata": {},
    "outputs": [
@@ -247,7 +353,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[115], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclientes \u001b[38;5;241m=\u001b[39m { \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNombre\u001b[39m\u001b[38;5;124m\"\u001b[39m : nombre,\n\u001b[0;32m      2\u001b[0m                  \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEmail\u001b[39m\u001b[38;5;124m\"\u001b[39m : email,\n\u001b[0;32m      3\u001b[0m                  \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCompras realizadas\u001b[39m\u001b[38;5;124m\"\u001b[39m : compras\n\u001b[0;32m      4\u001b[0m }\n",
+      "Cell \u001b[1;32mIn[125], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclientes \u001b[38;5;241m=\u001b[39m { \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNombre\u001b[39m\u001b[38;5;124m\"\u001b[39m : nombre,\n\u001b[0;32m      2\u001b[0m                  \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEmail\u001b[39m\u001b[38;5;124m\"\u001b[39m : email,\n\u001b[0;32m      3\u001b[0m                  \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCompras realizadas\u001b[39m\u001b[38;5;124m\"\u001b[39m : compras\n\u001b[0;32m      4\u001b[0m }\n",
       "\u001b[1;31mNameError\u001b[0m: name 'nombre' is not defined"
      ]
     }
