--- a/evalucion_mod1_BGR.ipynb
+++ b/evalucion_mod1_BGR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 106,
    "id": "7225e49d",
    "metadata": {},
    "outputs": [],
@@ -91,18 +91,35 @@
     "        clientes = {}\n",
     "        for nombre, info in self.clientes.items(): #items() devuelve lista de tuplas con clave y su valor\n",
     "            email = info['Email'] #como es un dic nos puede dar error, por eso se usa info, para poder extraer los datos \n",
-    "            compras = info['Compras realizadas']\n",
     "            clientes[nombre] = {\n",
     "                        \"Email\": email,\n",
-    "                        \"Compras realizadas\": compras,\n",
     "                    }\n",
     "        return clientes\n",
+    "    def realizar_compra(self, cantidad, cliente):\n",
+    "        if  cliente not in self.clientes: #primera condición cliente registrado\n",
+    "            print(f\"El cliente no está registrado, se debe registrar para la compra.\")\n",
+    "        \n",
+    "        else:\n",
+    "            while  True:\n",
+    "                producto = input('Inserte el producto que quiere buscar').lower() #input dentro del bucle para volver a preguntar\n",
+    "                \n",
+    "                if producto not in self.inventario: #segunda condición para hacer compra\n",
+    "                    print(f\"El producto {producto} no se encuentra disponible.\")\n",
+    "                if producto in self.inventario:\n",
+    "                    if self.inventario[producto][1] >= cantidad: #si está en el inventario y hay cantidad suficiente\n",
+    "                        self.inventario[producto][1] -= cantidad #se actualiza la cantidad en el inventario\n",
+    "                        print(f\"La compra del producto {producto} ha sido un éxito.\")\n",
+    "                        print(f\"¿Quiere comprar algún otro producto de la tienda? Productos disponibles {self.inventario}.\")\n",
+    "                seguir_comprando = input('¿Quiere seguir comprando?').lower() #volver a preguntar para detener el bucle\n",
+    "                if seguir_comprando == 'no':\n",
+    "                    print(\"Gracias por su compra. Hasta la próxima.\")\n",
+    "                    break\n",
     "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 107,
    "id": "839442b9",
    "metadata": {},
    "outputs": [
@@ -127,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 108,
    "id": "9545b3ea",
    "metadata": {},
    "outputs": [
@@ -139,7 +156,7 @@
        " 'patatas': {'Nombre': 'patatas', 'Precio €': 4, 'Cantidad': 60}}"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 109,
    "id": "3f15109d",
    "metadata": {},
    "outputs": [
@@ -172,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 110,
    "id": "20240120",
    "metadata": {},
    "outputs": [
@@ -194,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 111,
    "id": "58c4f84b",
    "metadata": {},
    "outputs": [
@@ -212,7 +229,7 @@
        " 'arándanos': {'Nombre': 'arándanos', 'Precio €': 5, 'Cantidad': 40}}"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 112,
    "id": "3211f6d9",
    "metadata": {},
    "outputs": [
@@ -244,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 113,
    "id": "c3a48183",
    "metadata": {},
    "outputs": [
@@ -269,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 114,
    "id": "59410b11",
    "metadata": {},
    "outputs": [
@@ -287,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 115,
    "id": "83746050",
    "metadata": {},
    "outputs": [
@@ -295,12 +312,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Marc': {'Email': 'Marc@gmail.com', 'Compras realizadas': 0}, 'Mercedes': {'Email': 'merce@gmail.com', 'Compras realizadas': 0}, 'Melania': {'Email': 'mel@gmail.com', 'Compras realizadas': 0}}\n"
+      "{'Marc': {'Email': 'Marc@gmail.com'}, 'Mercedes': {'Email': 'merce@gmail.com'}, 'Melania': {'Email': 'mel@gmail.com'}}\n"
      ]
     }
    ],
    "source": [
     "print(tienda1.ver_clientes())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "0594a193",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La compra del producto fresas ha sido un éxito.\n",
+      "¿Quiere comprar algún otro producto de la tienda? Productos disponibles {'fresas': [3, 48], 'arándanos': [5, 40]}.\n",
+      "Gracias por su compra. Hasta la próxima.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda1.realizar_compra(2, 'Marc')"
    ]
   }
  ],
