--- a/evalucion_mod1_BGR.ipynb
+++ b/evalucion_mod1_BGR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 118,
    "id": "7225e49d",
    "metadata": {},
    "outputs": [],
@@ -114,12 +114,29 @@
     "                if seguir_comprando == 'no':\n",
     "                    print(\"Gracias por su compra. Hasta la próxima.\")\n",
     "                    break\n",
+    "    def procesar_pago(self, producto):\n",
+    "        precio, cantidad_disponible = self.inventario[producto]\n",
+    "        valor_total = 0\n",
+    "        while True: \n",
+    "            try:\n",
+    "                cantidad_cliente = int(input('Inserte aquí la cantidad de producto que quiere.'))\n",
+    "                if cantidad_cliente <= cantidad_disponible:\n",
+    "                    valor = cantidad_cliente * precio\n",
+    "                    valor_total += valor #para hacer esto se necesita un bucle, ponemos while True\n",
+    "                    print(f\"Compra por la cantidad {cantidad_cliente} por el valor de {valor_total} € realizada con éxito.\")\n",
+    "                    \n",
+    "                else:\n",
+    "                    print(f\"Error, no hay tanta cantidad del producto.\")\n",
+    "\n",
+    "            except ValueError: #se usa por si alguien pone un número inválido, como negativo. La única clase de excepción para este ejercicio.\n",
+    "                print(\"Error. Inserte un número válido.\")\n",
+    "            break\n",
     "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 119,
    "id": "839442b9",
    "metadata": {},
    "outputs": [
@@ -144,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 120,
    "id": "9545b3ea",
    "metadata": {},
    "outputs": [
@@ -156,7 +173,7 @@
        " 'patatas': {'Nombre': 'patatas', 'Precio €': 4, 'Cantidad': 60}}"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 121,
    "id": "3f15109d",
    "metadata": {},
    "outputs": [
@@ -189,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 122,
    "id": "20240120",
    "metadata": {},
    "outputs": [
@@ -211,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 123,
    "id": "58c4f84b",
    "metadata": {},
    "outputs": [
@@ -229,7 +246,7 @@
        " 'arándanos': {'Nombre': 'arándanos', 'Precio €': 5, 'Cantidad': 40}}"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 124,
    "id": "3211f6d9",
    "metadata": {},
    "outputs": [
@@ -261,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 125,
    "id": "c3a48183",
    "metadata": {},
    "outputs": [
@@ -286,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 126,
    "id": "59410b11",
    "metadata": {},
    "outputs": [
@@ -304,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 127,
    "id": "83746050",
    "metadata": {},
    "outputs": [
@@ -322,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 128,
    "id": "0594a193",
    "metadata": {},
    "outputs": [
@@ -338,6 +355,24 @@
    ],
    "source": [
     "tienda1.realizar_compra(2, 'Marc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "a793615c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compra por la cantidad 2 por el valor de 6 € realizada con éxito.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda1.procesar_pago('fresas')"
    ]
   }
  ],
