--- a/prueba_bonus.ipynb
+++ b/prueba_bonus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 1,
    "id": "66adbf31",
    "metadata": {},
    "outputs": [],
@@ -108,20 +108,41 @@
     "                if producto not in self.inventario: #segunda condición para hacer compra\n",
     "                    print(f\"El producto {producto} no se encuentra disponible.\")\n",
     "                if producto in self.inventario:\n",
-    "                    if self.inventario[producto] >= cantidad: #si está en el inventario y hay cantidad suficiente\n",
-    "                        self.inventario[producto] -= cantidad #se actualiza la cantidad en el inventario\n",
+    "                    if self.inventario[producto][1] >= cantidad: #si está en el inventario y hay cantidad suficiente\n",
+    "                        self.inventario[producto][1] -= cantidad #se actualiza la cantidad en el inventario\n",
     "                        print(f\"La compra del producto {producto} ha sido un éxito.\")\n",
     "                        print(f\"¿Quiere comprar algún otro producto de la tienda? Productos disponibles {self.inventario}.\")\n",
     "                seguir_comprando = input('¿Quiere seguir comprando?').lower() #volver a preguntar para detener el bucle\n",
     "                if seguir_comprando == 'no':\n",
     "                    print(\"Gracias por su compra. Hasta la próxima.\")\n",
     "                    break\n",
-    "                "
+    "\n",
+    "    def procesar_pago(self, producto):\n",
+    "        precio, cantidad_disponible = self.inventario[producto]\n",
+    "        valor_total = 0\n",
+    "        while True: \n",
+    "            try:\n",
+    "                cantidad_cliente = int(input('Inserte aquí la cantidad de producto que quiere.'))\n",
+    "                if cantidad_cliente <= cantidad_disponible:\n",
+    "                    valor = cantidad_cliente * precio\n",
+    "                    valor_total += valor #para hacer esto se necesita un bucle, ponemos while True\n",
+    "                    print(f\"Compra por la cantidad {cantidad_cliente} por el valor de {valor_total} € realizada con éxito.\")\n",
+    "                    \n",
+    "                else:\n",
+    "                    print(f\"Error, no hay tanta cantidad del producto.\")\n",
+    "\n",
+    "            except ValueError: #se usa por si alguien pone un número inválido, como negativo. La única clase de excepción para este ejercicio.\n",
+    "                print(\"Error. Inserte un número válido.\")\n",
+    "            break\n",
+    "            \n",
+    "                \n",
+    "            \n",
+    "                    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 2,
    "id": "aa4bded2",
    "metadata": {},
    "outputs": [
@@ -166,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 3,
    "id": "6af2074c",
    "metadata": {},
    "outputs": [
@@ -192,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 4,
    "id": "3a7ebd9f",
    "metadata": {},
    "outputs": [
@@ -210,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 5,
    "id": "0f0b8abd",
    "metadata": {},
    "outputs": [
@@ -228,20 +249,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 6,
    "id": "b620dfd3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'>=' not supported between instances of 'list' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[127], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m tienda1\u001b[38;5;241m.\u001b[39mrealizar_compra(\u001b[38;5;241m2\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMarc\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[116], line 102\u001b[0m, in \u001b[0;36mTiendaOnline.realizar_compra\u001b[1;34m(self, cantidad, cliente)\u001b[0m\n\u001b[0;32m    100\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEl producto \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mproducto\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m no se encuentra disponible.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    101\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m producto \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minventario:\n\u001b[1;32m--> 102\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minventario[producto] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m cantidad: \u001b[38;5;66;03m#si está en el inventario y hay cantidad suficiente\u001b[39;00m\n\u001b[0;32m    103\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minventario[producto] \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m cantidad \u001b[38;5;66;03m#se actualiza la cantidad en el inventario\u001b[39;00m\n\u001b[0;32m    104\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLa compra del producto \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mproducto\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m ha sido un éxito.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: '>=' not supported between instances of 'list' and 'int'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La compra del producto fresas ha sido un éxito.\n",
+      "¿Quiere comprar algún otro producto de la tienda? Productos disponibles {'fresas': [3, 48], 'arándanos': [5, 40]}.\n",
+      "Gracias por su compra. Hasta la próxima.\n"
      ]
     }
    ],
@@ -254,7 +272,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
+   "id": "6d11c5fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compra por la cantidad 4 por el valor de 12 € realizada con éxito.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda1.procesar_pago('fresas')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41f21ceb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def registrar_compra(self, nombre_cliente, carrito): \n",
+    "    total_ventas = 0\n",
+    "    total_compra = 0 #se inicializa en 0 porque todavía no se ha comprado nada\n",
+    "    if nombre_cliente not in clientes: #si el cliente no está en nuestra base de datos\n",
+    "        print(f\"No se puede realizar la acción. Este cliente no está registrado.\")\n",
+    "    \n",
+    "    else: #si el cliente sí está\n",
+    "        for producto, info in carrito.items(): #carrito es un dicc --> items() --> lista de tuplas\n",
+    "            precio = info['Precio']     \n",
+    "            cantidad = info['Cantidad'] #como es un dic nos puede dar error, por eso se usa info, para poder extraer los datos\n",
+    "                                \n",
+    "            total_compra += precio * cantidad #+= se acumulen en el bucle\n",
+    "            total_ventas += total_compra  #en la tienda se suma todas las compras para dar un total ventas, en un bucle para que se añadan\n",
+    "            print(f\"Tu compra del producto {producto} por la cantidad {cantidad} y el valor de {total_compra}€. Ha sido registrada con éxito.\")\n",
+    "            \n",
+    "        #asignación directa para registrar compra y ventas\n",
+    "        clientes[nombre_cliente]['Carrito'] = carrito\n",
+    "        clientes[nombre_cliente]['Total'] = total_compra "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65b0159a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def registrar_compra(self, nombre_cliente, carrito): \n",
+    "    total_compra = 0 #se inicializa en 0 porque todavía no se ha comprado nada\n",
+    "    if nombre_cliente not in clientes: #si el cliente no está en nuestra base de datos\n",
+    "        print(f\"No se puede realizar la acción. Este cliente no está registrado.\")\n",
+    "    \n",
+    "    else: #si el cliente sí está\n",
+    "        for producto, info in carrito.items(): #carrito es un dicc --> items() --> lista de tuplas\n",
+    "            precio = info['Precio']     \n",
+    "            cantidad = info['Cantidad'] #como es un dic nos puede dar error, por eso se usa info, para poder extraer los datos\n",
+    "                                \n",
+    "            total_compra = precio * cantidad\n",
+    "            total_ventas += total_compra  #en la tienda se suma todas las compras para dar un total ventas, en un bucle para que se añadan\n",
+    "            print(f\"Tu compra del producto {producto} por la cantidad {cantidad} y el valor de {total_compra}€. Ha sido registrada con éxito.\")\n",
+    "            \n",
+    "        #asignación directa para registrar compra y ventas\n",
+    "        clientes[nombre_cliente]['Carrito'] = carrito\n",
+    "        clientes[nombre_cliente]['Total'] = total_compra     \n",
+    "\n",
+    "        #me falta definir total_ventas, confusión con total compras           "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8070297e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def registrar_compra(self, nombre_cliente, carrito): \n",
+    "    carrito = {} #vacío para poder llenarlo\n",
+    "    total_compra = 0 #se inicializa en 0 porque todavía no se ha comprado nada\n",
+    "    if nombre_cliente not in clientes: #si el cliente no está en nuestra base de datos\n",
+    "        print(f\"No se puede realizar la acción. Este cliente no está registrado.\")\n",
+    "    \n",
+    "    else: #si el cliente sí está\n",
+    "        for producto in carrito.items(): #carrito es un dicc --> items() --> lista de tuplas\n",
+    "            carrito[producto] = {'Precio' : precio,     #crear parámetros en  carrito, AD\n",
+    "                                'Cantidad' : cantidad\n",
+    "                                }\n",
+    "            total_compra = precio * cantidad\n",
+    "            print(f\"Tu compra del producto {producto} por la cantidad {cantidad} y el valor de {total_compra}€. Ha sido registrada con éxito.\")\n",
+    "\n",
+    "#Falta guardar el registro de la compra en clientes y actualizar ventas\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74b4e865",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def registrar_compra(self, nombre_cliente, carrito): \n",
+    "    carrito = {}\n",
+    "    if nombre_cliente not in clientes:\n",
+    "        print(f\"No se puede realizar la acción. Este cliente no está registrado.\")\n",
+    "    \n",
+    "    else:\n",
+    "        carrito[producto] = {'Precio' : precio,     #crear parámetros en  carrito, AD\n",
+    "                             'Cantidad' : cantidad\n",
+    "                             }\n",
+    "        total_compra = precio * cantidad\n",
+    "        print(f\"Tu compra del producto {producto} por la cantidad {cantidad} y el valor de {total_compra}€. Ha sido registrada con éxito.\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "4304174b",
    "metadata": {},
    "outputs": [],
@@ -272,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 10,
    "id": "285a8c16",
    "metadata": {},
    "outputs": [],
@@ -291,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 11,
    "id": "9473fe80",
    "metadata": {},
    "outputs": [],
@@ -323,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 12,
    "id": "5c5c629d",
    "metadata": {},
    "outputs": [],
@@ -342,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 13,
    "id": "a36e3f10",
    "metadata": {},
    "outputs": [
@@ -353,7 +490,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[125], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclientes \u001b[38;5;241m=\u001b[39m { \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNombre\u001b[39m\u001b[38;5;124m\"\u001b[39m : nombre,\n\u001b[0;32m      2\u001b[0m                  \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEmail\u001b[39m\u001b[38;5;124m\"\u001b[39m : email,\n\u001b[0;32m      3\u001b[0m                  \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCompras realizadas\u001b[39m\u001b[38;5;124m\"\u001b[39m : compras\n\u001b[0;32m      4\u001b[0m }\n",
+      "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclientes \u001b[38;5;241m=\u001b[39m { \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNombre\u001b[39m\u001b[38;5;124m\"\u001b[39m : nombre,\n\u001b[0;32m      2\u001b[0m                  \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEmail\u001b[39m\u001b[38;5;124m\"\u001b[39m : email,\n\u001b[0;32m      3\u001b[0m                  \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCompras realizadas\u001b[39m\u001b[38;5;124m\"\u001b[39m : compras\n\u001b[0;32m      4\u001b[0m }\n",
       "\u001b[1;31mNameError\u001b[0m: name 'nombre' is not defined"
      ]
     }
