--- a/evalucion_mod1_BGR.ipynb
+++ b/evalucion_mod1_BGR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "7225e49d",
    "metadata": {},
    "outputs": [],
@@ -131,12 +131,43 @@
     "            except ValueError: #se usa por si alguien pone un número inválido, como negativo. La única clase de excepción para este ejercicio.\n",
     "                print(\"Error. Inserte un número válido.\")\n",
     "            break\n",
-    "                "
+    "    def registrar_compra(self, nombre_cliente, carrito): \n",
+    "        total_ventas = 0\n",
+    "        total_compra = 0 #se inicializa en 0 porque todavía no se ha comprado nada\n",
+    "        if nombre_cliente not in self.clientes: #si el cliente no está en nuestra base de datos\n",
+    "            print(f\"No se puede realizar la acción. Este cliente no está registrado.\")\n",
+    "        \n",
+    "        else: #si el cliente sí está\n",
+    "            for producto, info in carrito.items(): #carrito es un dicc --> items() --> lista de tuplas\n",
+    "                precio = info['Precio']     \n",
+    "                cantidad = info['Cantidad'] #como es un dic nos puede dar error, por eso se usa info, para poder extraer los datos\n",
+    "                                    \n",
+    "                total_compra += precio * cantidad #+= se acumulen en el bucle\n",
+    "                total_ventas += total_compra  #en la tienda se suma todas las compras para dar un total ventas, en un bucle para que se añadan\n",
+    "                print(f\"Tu compra del producto {producto} por la cantidad {cantidad} y el valor de {total_compra}€. Ha sido registrada con éxito.\")\n",
+    "                \n",
+    "            #asignación directa para registrar compra y ventas\n",
+    "            self.clientes[nombre_cliente]['Carrito'] = carrito #se cambia clientes por self.clientes, si no variable not defined\n",
+    "            self.clientes[nombre_cliente]['Total'] = total_compra   \n",
+    "\n",
+    "    def  ver_compras_cliente(self, nombre_cliente):\n",
+    "        if nombre_cliente in self.clientes:\n",
+    "            clientes_info = self.clientes[nombre_cliente]\n",
+    "            total_compras = clientes_info.get('Total compras', 0) #get para acceder a valores de diccionario\n",
+    "            productos = clientes_info.get('carrito', {})\n",
+    "            if total_compras > 0:\n",
+    "                clientes_info[nombre_cliente] = {\n",
+    "                            \"Productos\": productos,\n",
+    "                            \"Total Compras\": total_compras,\n",
+    "                            }\n",
+    "                print(f\"El cliente {nombre_cliente} ha comprado los productos {productos} por un valor de {total_compras}€.\")\n",
+    "            else:\n",
+    "                print(f\"El cliente {nombre_cliente} no ha realizado ninguna compra todavía.\")         "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "839442b9",
    "metadata": {},
    "outputs": [
@@ -161,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "9545b3ea",
    "metadata": {},
    "outputs": [
@@ -173,7 +204,7 @@
        " 'patatas': {'Nombre': 'patatas', 'Precio €': 4, 'Cantidad': 60}}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "3f15109d",
    "metadata": {},
    "outputs": [
@@ -206,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "20240120",
    "metadata": {},
    "outputs": [
@@ -228,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "58c4f84b",
    "metadata": {},
    "outputs": [
@@ -246,7 +277,7 @@
        " 'arándanos': {'Nombre': 'arándanos', 'Precio €': 5, 'Cantidad': 40}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "3211f6d9",
    "metadata": {},
    "outputs": [
@@ -278,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "c3a48183",
    "metadata": {},
    "outputs": [
@@ -303,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "id": "59410b11",
    "metadata": {},
    "outputs": [
@@ -321,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "id": "83746050",
    "metadata": {},
    "outputs": [
@@ -339,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "id": "0594a193",
    "metadata": {},
    "outputs": [
@@ -359,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "id": "a793615c",
    "metadata": {},
    "outputs": [
@@ -367,12 +398,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Compra por la cantidad 3 por el valor de 9 € realizada con éxito.\n"
+      "Compra por la cantidad 4 por el valor de 12 € realizada con éxito.\n"
      ]
     }
    ],
    "source": [
     "tienda1.procesar_pago('fresas')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "a79ad338",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tu compra del producto fresas por la cantidad 4 y el valor de 12€. Ha sido registrada con éxito.\n",
+      "No se puede realizar la acción. Este cliente no está registrado.\n"
+     ]
+    }
+   ],
+   "source": [
+    "carrito = {'fresas' : {'Precio' : 3, 'Cantidad': 4}}\n",
+    "tienda1.registrar_compra('Marc', carrito)\n",
+    "tienda1.registrar_compra('Pere', carrito)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65d2274a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El cliente Marc no ha realizado ninguna compra todavía.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda1.ver_compras_cliente('Marc') #da error porque Marc sí que ha realizado compras, algo no se ha actualizado correctamente en alguno de los pasos"
    ]
   }
  ],
