--- a/evalucion_mod1_BGR.ipynb
+++ b/evalucion_mod1_BGR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "7225e49d",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,13 @@
     "                            }\n",
     "                print(f\"El cliente {nombre_cliente} ha comprado los productos {productos} por un valor de {total_compras}€.\")\n",
     "            else:\n",
-    "                print(f\"El cliente {nombre_cliente} no ha realizado ninguna compra todavía.\")         "
+    "                print(f\"El cliente {nombre_cliente} no ha realizado ninguna compra todavía.\")    \n",
+    "\n",
+    "    def  calcular_ventas_totales(self): #planteado, hay inconsistencias y me dirá que hay variables sin definir, no sé como relacionarlas si romper el código de arriba\n",
+    "        total_tienda = 0\n",
+    "        for cliente in self.clientes.items():\n",
+    "            total_tienda += total_ventas #total_ventas es el total de cada cliente, en el bucle for se suman, no está definido\n",
+    "            print(f\"Las ventas totales de la tienda son {total_tienda} €.\")     "
    ]
   },
   {
